# container_demo

./: .gitignore  DEVELOPER_GUIDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/src/: main.py
api/tests/: test_main.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
