[tool.poetry]
name = "container-demo-api"
version = "0.1.0"
description = "Minimal FastAPI service for container demo"
authors = ["Emir"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.95.0"
uvicorn = {extras=["standard"], version="^0.22.0"}
pydantic = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
httpx = "^0.24.0"
